--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<!--<div id="editor">-->
+<!--  <p>The editor content goes here.</p>-->
+<!--</div>-->
+
+<!--<script src="bundle.js"></script>-->
+<app-root></app-root>
 </body>
 </html>
